# libzeye

./: CMakeLists.txt  README.md  base.c  base.h  main.c
doc/: user.md
model/: base.c  base.h  util.c  util.h  zeye_host_srch.c  zeye_host_srch.h  zeye_info.c  zeye_info.h
test/: test.h  test_res_info.c
util/: zeye_util.c  zeye_util.h
